# decentralSeedRecover

code/: cabal.project
code/SeedPhraseManager/: SeedPhraseManager.cabal
code/SeedPhraseManager/assets/datum/: request-datum.json
code/SeedPhraseManager/assets/shell-scripts/: balance.sh  borrowRequest.sh  burnFromScript.sh  cancelRequest.sh  createPubKeyHash.sh  createWallet.sh  currentSlot.sh  customMint.sh  env  env.sh  helpers.sh  lend.sh  mintFromScript.sh  payToScript.sh  payToScriptWithAsset.sh  sendFromWallet.sh  sendNativeFromWallet.sh  spendFromScript.sh  swapRequest.sh
code/SeedPhraseManager/assets/transactions/: tx.draft  tx.signed  walletBalances.txt
code/SeedPhraseManager/lecture/: Deploy.hs  SeedPhraseManager.hs
code/SeedPhraseManager/on-chain/: Deploy.hs  SeedPhraseManager.hs
code/Utilities/src/Utilities/: Conversions.hs  PlutusTx.hs  Serialise.hs
pages/: offChain.tsx
