cabal-version:      3.4
name:               SeedPhraseManager
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

common lang
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

-- common common-all-tests
--     import:           common-all

library
    import:             lang
    hs-source-dirs:     on-chain
    
    exposed-modules:    Deploy
                        SeedPhraseManager

    -- other-modules:      UntypedSpookyContexts
    
-- Plutus dependencies
    build-depends:    base
                    , cardano-api
                    , plutus-core
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , plutus-merkle-tree

-- Other dependenices
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , data-default
                    , text
                    , serialise
                    , utilities

-- test-suite SeedPhraseMAnager-homework
--     import:             lang
--     type:               exitcode-stdio-1.0
--     main-is:            THomework.hs
--     hs-source-dirs:     tests

--     build-depends:      plutus-tx,
--                         plutus-tx-plugin,
--                         data-default,
                        
--     build-depends:    base
--                     , QuickCheck
--                     , tasty
--                     , plutus-simple-model

